Thesis/Code_2025-11-22/wandb/run-20251124_091511-zu9uq5wy/files/output.log
> c:\users\lucac\desktop\codice\sme_for_adam_and_rmsprop\thesis\code_2025-11-22\poly\main.py(466)run_experiment_configuration()
-> breakpoint()
dict_keys(['disc', 'final_time', 'tau', 'c', 'epsilon', 'regime', 'optimizer', 'total_time_elapsed', 'skipped_initial_points', 'simulation keys', '1_order_stoc', '2_order_stoc', '1_order_det'])
*** WARNING: file 'C:\Users\lucac\Desktop\Codice\SME_for_Adam_and_RMSProp\Thesis\Code_2025-11-22\Poly\main.py' was edited, running stale code until the program is rerun
*** SyntaxError: invalid syntax
*** NameError: name 'x' is not defined
*** NameError: name 'x' is not defined
*** NameError: name 'x' is not defined
*** TypeError: 'function' object is not callable
*** TypeError: 'function' object is not callable
*** TypeError: 'function' object is not callable
<Poly.poly.function_poly object at 0x00000283EAEB6510>
*** TypeError: 'function' object is not callable
tensor([-1.000000, -0.979798, -0.959596, -0.939394, -0.919192, -0.898990,
        -0.878788, -0.858586, -0.838384, -0.818182, -0.797980, -0.777778,
        -0.757576, -0.737374, -0.717172, -0.696970, -0.676768, -0.656566,
        -0.636364, -0.616162, -0.595960, -0.575758, -0.555556, -0.535354,
        -0.515152, -0.494950, -0.474747, -0.454545, -0.434343, -0.414141,
        -0.393939, -0.373737, -0.353535, -0.333333, -0.313131, -0.292929,
        -0.272727, -0.252525, -0.232323, -0.212121, -0.191919, -0.171717,
        -0.151515, -0.131313, -0.111111, -0.090909, -0.070707, -0.050505,
        -0.030303, -0.010101,  0.010101,  0.030303,  0.050505,  0.070707,
         0.090909,  0.111111,  0.131313,  0.151515,  0.171717,  0.191919,
         0.212121,  0.232323,  0.252525,  0.272727,  0.292929,  0.313131,
         0.333333,  0.353535,  0.373737,  0.393939,  0.414141,  0.434343,
         0.454545,  0.474747,  0.494950,  0.515152,  0.535354,  0.555556,
         0.575758,  0.595960,  0.616162,  0.636364,  0.656566,  0.676768,
         0.696970,  0.717172,  0.737374,  0.757576,  0.777778,  0.797980,
         0.818182,  0.838384,  0.858586,  0.878788,  0.898990,  0.919192,
         0.939394,  0.959596,  0.979798,  1.000000])
*** AttributeError: 'function_poly' object has no attribute 'attribute'
['Diag_sigma', 'Sigma_sqrt', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__firstlineno__', '__format__', '__ge__', '__getattribute__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__static_attributes__', '__str__', '__subclasshook__', '__weakref__', 'autograd_vector_batch', 'coeff', 'coeff_1', 'coeff_2', 'f', 'f1', 'f1_prime', 'f1_second', 'f1_third', 'f2', 'f2_prime', 'f2_second', 'f2_third', 'f_prime', 'f_second', 'grad', 'grad_sigma', 'grad_sigma_diag', 'hessian_matrix_batch', 'hessian_sigma', 'square_root_var_z_squared']
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "C:\Users\lucac\Desktop\Codice\SME_for_Adam_and_RMSProp\Thesis\Code_2025-11-22\Poly\main.py", line 493, in <module>
    print("All experiments completed successfully!")
    ^^^^^^
  File "C:\Users\lucac\Desktop\Codice\SME_for_Adam_and_RMSProp\Thesis\Code_2025-11-22\Poly\main.py", line 484, in main
    print(f"Number of runs: {args.num_runs}")
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^




  File "C:\Users\lucac\Desktop\Codice\SME_for_Adam_and_RMSProp\Thesis\Code_2025-11-22\Poly\main.py", line 466, in run_experiment_configuration
    breakpoint()
    ~~~~~~~~~~^^
  File "C:\Program Files\WindowsApps\PythonSoftwareFoundation.Python.3.13_3.13.2544.0_x64__qbz5n2kfra8p0\Lib\bdb.py", line 116, in trace_dispatch
    return self.dispatch_opcode(frame, arg)
           ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^
  File "C:\Program Files\WindowsApps\PythonSoftwareFoundation.Python.3.13_3.13.2544.0_x64__qbz5n2kfra8p0\Lib\bdb.py", line 216, in dispatch_opcode
    if self.quitting: raise BdbQuit
                      ^^^^^^^^^^^^^
bdb.BdbQuit
